style: fixed z-index of toggle button and menu

--- a/assets/myStyle.css
+++ b/assets/myStyle.css
@@ -23,6 +23,10 @@ body{
 
 }
 
+.list-z-index{
+    z-index: 111;
+}
+
 .nav-toggler{
     height:40px;
     width:45px;
@@ -33,7 +37,7 @@ body{
     top:20px;
     position: fixed;
     border-radius: 5px;
-    
+    z-index: 11;
 }
 .nav-toggler span{
     width:1.5rem;
